# tuilight

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
src/: a.out  ansi.h  element.cpp  element.h  main.cpp  terminal.cpp  terminal.h  view.cpp  view.h
src/tuilight/: ansi.h  element.h  terminal.h  view.h
